[gd_scene load_steps=9 format=3 uid="uid://dkmkvmu8ayd0j"]

[ext_resource type="PackedScene" uid="uid://caii8av7sn4mb" path="res://Cenas/Templates/EnemyTemplate.tscn" id="1_fuvd6"]
[ext_resource type="Script" path="res://Scripts/BossInicial.gd" id="2_0p58i"]
[ext_resource type="Texture2D" uid="uid://vifamnujb0v8" path="res://Assets/BossTutorial-sheet.png" id="2_4hqg2"]
[ext_resource type="PackedScene" uid="uid://csqpjqoexuis" path="res://Cenas/Recursos/NavigationAgent2d.tscn" id="4_xykdl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64xe7"]
size = Vector2(38, 76)

[sub_resource type="CircleShape2D" id="CircleShape2D_pcj53"]
radius = 46.0109

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06f4y"]
size = Vector2(49, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01e56"]
size = Vector2(40, 78)

[node name="BossInicial" groups=["Enemy"] instance=ExtResource("1_fuvd6")]
collision_layer = 4
motion_mode = 1
script = ExtResource("2_0p58i")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-2, 3)
shape = SubResource("RectangleShape2D_64xe7")
debug_color = Color(0.251806, 0.525532, 0.93707, 0.42)

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("2_4hqg2")
hframes = 3

[node name="NavigationAgent2D" parent="." index="2" instance=ExtResource("4_xykdl")]

[node name="BarreiraVento" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarreiraVento" index="0"]
position = Vector2(-2, 2)
shape = SubResource("CircleShape2D_pcj53")
disabled = true
debug_color = Color(0.969575, 0.993694, 1, 0.42)

[node name="Hitbox" parent="." index="4" groups=["Enemy"]]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-2.5, 2)
shape = SubResource("RectangleShape2D_06f4y")
debug_color = Color(0.927015, 0.220071, 0.403177, 0.42)

[node name="Hurtbox" parent="." index="5"]
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-2, 3)
shape = SubResource("RectangleShape2D_01e56")
debug_color = Color(0.61452, 0.535714, 0.0955433, 0.42)

[connection signal="area_entered" from="BarreiraVento" to="." method="_on_barreira_vento_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
